--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,51 @@
 </head>
 
 <body>
+	<!-- START -- navbar -->
+    <nav id="navbar">
 
+        <!-- START -- LOGO -->
+        <div class="nav-comp-logo nav-button-div">
+            <a id="comp-logo" href="" target="_self">
+                <svg width="70" height="50" class="nav-button-div">
+                    <!--top line-->
+                    <line x1="0" x2="70" y1="0" y2="0" stroke="black" />
+
+                    <!--top left corner to bottom right-->
+                    <line x1="0" x2="70" y1="0" y2="50" stroke="black" />
+
+                    <!--right line-->
+                    <line x1="70" x2="70" y1="0" y2="50" stroke="black" />
+                    <!--bottom line-->
+                    <line x1="0" x2="70" y1="50" y2="50" stroke="black" />
+
+                    <!--bottom left corner to top right-->
+                    <line x1="0" x2="70" y1="50" y2="0" stroke="black" />
+
+                    <!--left line-->
+                    <line x1="0" x2="0" y1="0" y2="50" stroke="black" />
+                </svg>
+            </a>
+        </div>
+        <!-- END -- LOGO -->
+
+        <!-- blank space -->
+        <div class="nav-button-div"></div>
+
+        <!-- START -- EXAMPLE button -->
+		<div class="nav-button-div">
+			<a class="nav-button anim-fadeout" href="" target="_blank">EXAMPLE</a>
+		</div>
+        <!-- END -- EXAMPLE button -->
+
+        <!-- START -- EXAMPLE 2 button -->
+        <div class="nav-button-div">
+			<a class="nav-button anim-fadeout" href="" target="_blank">EXAMPLE 2</a>
+		</div>
+        <!-- END -- EXAMPLE 2 button -->
+
+    </nav>
+    <!-- END -- navbar -->
 
 </body>
 
