Carousel muy basico - funcional

--- a/src/index.html
+++ b/src/index.html
@@ -17,15 +17,15 @@
     <div id="carousel">
         <label for="img-input-1" class="carousel-img-input-label"><hr></label>
         <input type="radio" name="image-carousel" id="img-input-1" class="carousel-img-input" checked>
-        <br><img class="carousel-img" src="img/ropa1.png" alt="Ropa colgada de un perchero.">
+        <img class="carousel-img" src="img/ropa1.png" alt="Ropa colgada de un perchero.">
 
         <br><label for="img-input-1" class="carousel-img-input-labe2"></label>
         <input type="radio" name="image-carousel" id="img-input-2" class="carousel-img-input">
-        <br><img class="carousel-img" src="img/ropa2.png" alt="Ropa colgada de un perchero.">
+        <img class="carousel-img" src="img/ropa2.png" alt="Ropa colgada de un perchero.">
 
         <br><label for="img-input-1" class="carousel-img-input-labe3"></label>
         <input type="radio" name="image-carousel" id="img-input-3" class="carousel-img-input">
-        <br><img class="carousel-img" src="img/ropa3.png" alt="Ropa colgada de un perchero.">
+        <img class="carousel-img" src="img/ropa3.png" alt="Ropa colgada de un perchero.">
     </div>
 
     <!-- END -- carousel -->
