--- a/src/index.html
+++ b/src/index.html
@@ -3,13 +3,62 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
 
+    <!--NAVBAR-->
+
+    <!--CONTENT-->
+    <div>
+        <div class="proyecto">
+
+        </div>
+        <div class="trabajo">
+            <div class="mission">
+                <table border="3">
+                    <tr>
+                        <th scope="ico"><img class="img" src="img/Tienda.jpg"></th>
+                    </tr>
+                    <tr>
+                        <td>
+                            <p>Es una tienda en lo que encuentras todo lo que estas buscando, ofrecemos nuevos estilos
+                                novedosos, de colores llamativos.
+                                Camisteas, Sudaderas, Vestidos, Jeans, Blusas, Minifaldas, Top, Shorts, Pantalones de
+                                vestir, Zapatos y muchos más.
+                                Además tenemos ofertas y codigos de descuentos.
+                            </p>
+                        </td>
+
+                    </tr>
+                </table>
+            </div>
+            <div class="vision">
+                <table border="3">
+                    <tr>
+                        <th scope="ico"><img class="img" src="img/Tienda.jpg"></th>
+                    </tr>
+                    <tr>
+                        <td>
+                            <p>Somos una empresa comprometida a ofrecer a sus clientes los productos de la mayor calidad
+                                a los mejores precios mediante un servicio personalizado a cada uno de nuestros
+                                clientes y proporcionamos a nuestros clientes los elementos necesarios para resaltar su
+                                belleza.
+                            </p>
+                        </td>
+
+                    </tr>
+                </table>
+
+            </div>
+        </div>
+
+    </div>
+
+    <!--FOOTER-->
 
 </body>
 
